# omonic-arm-locator

./: .gitmodules  README.md
client/: CMakeLists.txt
client/src/: main.cpp
client/src/machineinfo/: machineinfo.hpp
client/src/pinger/: Pinger.hpp
server/: CMakeLists.txt  httpRequest.http
server/configs/: database.json  drogon_config.json
server/src/: main.cpp
server/src/armDB/: ArmDB.cpp  ArmDB.hpp
server/src/database/: Database.cpp  Database.hpp  SqlLite3Database.cpp  SqlLite3Database.hpp
server/src/server/: Server.cpp  Server.hpp
server/src/utils/: Utils.hpp
